--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.2",
     "moment": "^2.29.4",
     "next": "14.0.4",
+    "nextjs-toploader": "^1.6.4",
     "prisma": "^5.7.0",
     "react": "^18",
     "react-dom": "^18",
